--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Development/test local configuration
+.env
+.env.test
