--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "express-validator": "^2.17.1",
     "http-auth": "^2.2.5",
     "jade": "^1.9.2",
     "mongoose": "^4.1.5",
