--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "starter-node-express",
+  "name": "call-tracking-node",
   "version": "1.0.0",
-  "description": "A Twilio starter project for Node.js development using the Express web framework",
+  "description": "Call tracking using Twilio, TwiML and Express.js",
   "main": "index.js",
   "scripts": {
     "test": "export NODE_ENV=test && mocha test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TwilioDevEd/starter-node-express"
+    "url": "https://github.com/TwilioDevEd/call-tracking-node"
   },
   "keywords": [
     "twilio",
@@ -21,9 +21,9 @@
   "author": "Kevin Whinnery",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TwilioDevEd/starter-node-express/issues"
+    "url": "https://github.com/TwilioDevEd/call-tracking-node/issues"
   },
-  "homepage": "https://github.com/TwilioDevEd/starter-node-express",
+  "homepage": "https://github.com/TwilioDevEd/call-tracking-node",
   "dependencies": {
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
@@ -43,6 +43,7 @@
     "chai": "^2.1.0",
     "cheerio": "^0.19.0",
     "mocha": "^2.3.0",
+    "mockery": "^1.4.0",
     "sinon": "^1.16.1",
     "supertest": "^1.1.0"
   },
