--- a/package.json
+++ b/package.json
@@ -49,7 +49,5 @@
     "sinon": "^1.16.1",
     "supertest": "^1.1.0"
   },
-  "engines": {
-    "node": ">= 0.10.0"
-  }
+  "engines" : { "node" : ">=4.1.0 <5.5.0" }
 }
