--- a/package.json
+++ b/package.json
@@ -28,26 +28,26 @@
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
     "csurf": "^1.8.3",
-    "dotenv": "^1.2.0",
-    "express": "^4.12.0",
+    "dotenv": "^2.0.0",
     "express-session": "^1.10.3",
     "express-validator": "^2.17.1",
-    "http-auth": "^2.2.5",
+    "express": "^4.12.0",
+    "http-auth": "^3.1.0",
     "jade": "^1.9.2",
     "mongoose": "^4.1.5",
     "morgan": "^1.5.1",
     "q": "^1.4.1",
     "sanitize-html": "^1.10.0",
-    "twilio": "^1.11.1",
+    "twilio": "3.0.0-rc.13",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^2.1.0",
-    "cheerio": "^0.19.0",
-    "mocha": "^2.3.0",
+    "chai": "^3.5.0",
+    "cheerio": "^0.22.0",
+    "mocha": "^3.1.2",
     "nock-vcr-recorder-mocha": "^0.3.2",
     "sinon": "^1.16.1",
-    "supertest": "^1.1.0"
+    "supertest": "^2.0.1"
   },
-  "engines" : { "node" : ">=4.1.0 <5.5.0" }
+  "engines" : { "node" : ">=4.6.0" }
 }
