--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_APP_SID=
-MONGO_URL=
+export TWILIO_ACCOUNT_SID=Your-Account-SID
+export TWILIO_AUTH_TOKEN=Your-Twilio-Authy-Token
+export TWILIO_APP_SID=Your-Twilio-APP-SID
+export MONGO_URL= # i.e. mongodb://localhost:27017/call-tracking
