--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
     "csurf": "^1.8.3",
-    "dotenv": "^2.0.0",
+    "dotenv-safe": "^3.0.0",
+    "express": "^4.12.0",
     "express-session": "^1.10.3",
     "express-validator": "^2.17.1",
-    "express": "^4.12.0",
     "http-auth": "^3.1.0",
     "jade": "^1.9.2",
     "mongoose": "^4.1.5",
@@ -45,9 +45,11 @@
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "mocha": "^3.1.2",
-    "nock-vcr-recorder-mocha": "^0.3.2",
+    "nock": "^9.0.2",
     "sinon": "^1.16.1",
     "supertest": "^2.0.1"
   },
-  "engines" : { "node" : ">=4.6.0" }
+  "engines": {
+    "node": ">=4.6.0"
+  }
 }
