Replace dotenv with dotenv-safe

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-export TWILIO_ACCOUNT_SID=Your-Account-SID
-export TWILIO_AUTH_TOKEN=Your-Twilio-Authy-Token
-export TWILIO_APP_SID=Your-Twilio-APP-SID
-export MONGO_URL= # i.e. mongodb://localhost:27017/call-tracking
+# Your Twilio Account SID
+TWILIO_ACCOUNT_SID=
+
+# Your Auth Token
+TWILIO_AUTH_TOKEN=
+
+# Your Twilio App SID
+TWILIO_APP_SID=
+
+# Your mongodb connection string i.e. mongodb://localhost:27017/call-tracking
+MONGO_URL=
