--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Call tracking using Twilio, TwiML and Express.js",
   "main": "index.js",
   "scripts": {
+    "start":"node index",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --timeout 4000 test"
   },
   "repository": {
