Allow a MONGO_URL and provide default if none is set.

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,6 @@ TWILIO_AUTH_TOKEN=
 TWILIO_APP_SID=
 
 # Your mongodb connection string i.e. mongodb://localhost:27017/call-tracking
-MONGO_URL=
+# If you leave this variable commented out, the application will create a new
+# local mongodb database called "call-tracking"
+# MONGO_URL=
