Use api key and secret instead of auth token.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-# Api keys and tokens can be found here https://www.twilio.com/console
+# Find these at https://www.twilio.com/console
+TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
-# Your Twilio Account SID
-TWILIO_ACCOUNT_SID=
+# SID of your TwiML Application
+# Go to the console to view and/or create a new twiml app:
+# https://www.twilio.com/console/voice/twiml/apps
+# OR you can create a new app from the command line:
+# twilio api:core:applications:create --friendly-name=voice-client-javascript
+TWILIO_APP_SID=APXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
-# Your Auth Token
-TWILIO_AUTH_TOKEN=
-
-# Your Twilio App SID
-TWILIO_APP_SID=
+# Your REST API Key information
+# View keys or create a new key from the console:
+# https://www.twilio.com/console/project/api-keys
+# NOTE: Make sure to copy the secret, it will only be displayed once
+TWILIO_API_KEY=SKXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_API_SECRET=XXXXXXXXXXXXXXXXX
 
 # Your mongodb connection string i.e. mongodb://localhost:27017/call-tracking
 # If you leave this variable commented out, the application will create a new
