Small README fixes.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Find these at https://www.twilio.com/console
+# Find this at https://www.twilio.com/console
 TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # SID of your TwiML Application
