Add error handler, add NODE_ENV in .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ TWILIO_API_SECRET=XXXXXXXXXXXXXXXXX
 # If you leave this variable commented out, the application will create a new
 # local mongodb database called "call-tracking"
 # MONGO_URL=
+
+NODE_ENV=production
